<resources>
    <string name="app_name">SuperPrayer</string>
    <string name="prayer_times_frag">Times</string>
    <string name="log_frag">Prayer Log</string>
    <string name="compass_frag">Compass</string>

    <string name="network_check">Network disconnected. Times wont update</string>
    <string name="network_check_success">Updating times</string>

    <string name="shared_prefs_key">prayer_times_storeage</string>
    <string name="location_permission_denied">Location permission denied. Can not get prayer times.</string>
    <string name="lat_location">latitude_location_key_prefs_editor</string>
    <string name="lng_location">longitude_location_key_prefs_editor</string>
    <string name="is_first_key">shared_prefs_is_first_log_frag_key_101230401</string>


    <string name="string_fajr">Fajr</string>
    <string name="string_duhr">Duhr</string>
    <string name="string_asr">Asr</string>
    <string name="string_maghrib">Maghrib</string>
    <string name="string_isha">Isha</string>
    <string name="next_prayer_header">Next prayer</string>
    <string name="sunrise_sunset_header"> Sunrise/Sunset.</string>
    <string name="tv_sunrise"> Sunrise:</string>
    <string name="tv_sunset"> Sunset:</string>
    <string name="tv_retry_network">Failed to find network. Turn on Wi-fi. Tap to retry</string>
    <string name="tv_retry_location">Failed to find location. Please turn on location. Tap to retry</string>
    <string name="tv_retry_permission">Permission denied. App requires permission to be used. Tap to retry</string>


    <string name="string_not_yet_loaded">-- --</string>
    <string name="prayer_next_end"> All done for Today!</string>


    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="search_prayer_menu">Search prayer times</string>
    <string name="search_prayer_date_menu">Search prayer time by date</string>
    <string name="search_time">Search timings by date</string>
    <string name="delete_db">Reset prayer log</string>


    <string name="notification_title"> Super Prayer</string>
    <string name="notification_channel_text"> Super Prayer Notification</string>

    <string name="no_data_text">No prayers missed</string>


    <string name="log_tip">Click on the blue label to add</string>
    <string name="never_show_again">Never show again</string>
    <string name="prefs_should_show_tip_again">never_show_again_perfs_entry_1000</string>
    <string name="confirm_delete">Are you sure you want to delete your log? </string>


    <string name="zero_missed_default">0 missed</string>

    <string name="dialog_location_request_text">Location needed to get prayer times!</string>
    <string name="dialog_location_manual_option">Enter location manually.</string>
    <string name="dialog_location_reject_option"> Deny permission/location.</string>
    <string name="title_activity_settings">Settings</string>

    <string name="settings_pref_root_key">settings_pref_root_key-></string>

    <string name="settings_pref_notification">settings_pref_key_notifcation?</string>
    <string name="settings_pref_method">settings_pref_key_method?</string>
    <string name="settings_pref_school">settings_pref_key_school?</string>
    <string name="settings_title">Settings</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries_method">
        <item> 0</item>
        <item> 1</item>
        <item> 2</item>
        <item> 3</item>
        <item> 4</item>
        <item> 5</item>
        <item> 6</item>
        <item> 7</item>
        <item> 8</item>
        <item> 9</item>
        <item> 10</item>
        <item> 11</item>
        <item> 12</item>

    </string-array>


    <string-array name="list_preference_entry_values_method">
        <item>Shia Ithna-Ansari</item>
        <item>Muslim World League</item>
        <item>Islamic Society of North America</item>
        <item>Egyptian General Authority of Survey</item>
        <item>Umm Al-Qura University, Makkah</item>
        <item>University of Islamic Sciences, Karachi</item>
        <item>Institute of Geophysics, University of Tehran</item>
        <item>Gulf Region</item>
        <item>Kuwait</item>
        <item>Qatar</item>
        <item>Majlis Ugama Islam Singapura, Singapore</item>
        <item>Union Organization islamic de France</item>
        <item>Diyanet İşleri Başkanlığı, Turkey</item>

    </string-array>

    <string-array name="list_preference_entries_school">
        <item>0</item>
        <item>1</item>


    </string-array>

    <string-array name="list_preference_entry_values_school">
        <item>Shafi</item>
        <item>Hanafi</item>

    </string-array>


    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_my_settings">Settings</string>

    <string name="my_about_page_description">

        Thank you for downloading Superprayer. Superprayer is an Android app built by me, Ridhwaan Anayetullah, over a span of 5 months.
        The purpose of this app is to provide a functional Prayer times app without any annoying ads, as well as provide a simple way to keep track of missed prayers and find the Qiblah with a compass.
        If you like my work please leave a rating, or contact me for business or professional inquiries. If you want to leave feedback, send me an email using the sidebar.


    </string>

</resources>
