<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorMaghrib"
        >


        <TextView
            android:id="@+id/dialog_location_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Loading..."
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="28dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:layout_marginLeft="8dp"

            />

    </FrameLayout>

    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"

            >


            <TextView
                android:layout_toRightOf="@+id/prayer_image_view_fajr"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:textSize="18dp"
                android:text="@string/string_fajr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />

            <TextView
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:id="@+id/fajr_time_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:layout_margin="4dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/string_not_yet_loaded"
                />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <RelativeLayout
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_toRightOf="@+id/prayer_image_view_duhr"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:textSize="18dp"
                android:text="@string/string_duhr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />

            <TextView
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:id="@+id/duhr_time_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:layout_margin="4dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/string_not_yet_loaded"


                />



        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <RelativeLayout
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_toRightOf="@+id/prayer_image_view_asr"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:textSize="18dp"
                android:text="@string/string_asr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />

            <TextView
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:id="@+id/asr_time_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:layout_margin="4dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/string_not_yet_loaded"

                />



        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <RelativeLayout
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_toRightOf="@+id/prayer_image_view_Maghrib"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:textSize="18dp"
                android:text="@string/string_maghrib"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />

            <TextView
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:id="@+id/maghrib_time_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:layout_margin="4dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/string_not_yet_loaded"

                />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <RelativeLayout
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_toRightOf="@+id/prayer_image_view_isha"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:textSize="18dp"
                android:text="@string/string_isha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />

            <TextView
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:id="@+id/isha_time_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:layout_margin="4dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/string_not_yet_loaded"

                />



             </RelativeLayout>

        </LinearLayout>

    </LinearLayout>