<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="12dp"
        android:text="Today"
        android:textStyle="bold"
        />

    <android.support.v7.widget.CardView
        android:elevation="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="18dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_header"
        app:cardCornerRadius="8dp"
        >

        <LinearLayout
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"

                >

                <ImageView
                    android:id="@+id/prayer_image_view_fajr"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/weather_clear"></ImageView>

                <TextView
                    android:layout_toRightOf="@+id/prayer_image_view_fajr"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="4dp"
                    android:textSize="18dp"
                    android:text="@string/string_fajr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    />

                <TextView
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="4dp"
                    android:id="@+id/fajr_time_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:layout_margin="4dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"

                    android:text="3:45"
                    />



            </RelativeLayout>


            <RelativeLayout
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/prayer_image_view_duhr"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/weather_clear_duhr"></ImageView>

                <TextView
                    android:layout_toRightOf="@+id/prayer_image_view_duhr"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="4dp"
                    android:textSize="18dp"
                    android:text="@string/string_duhr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    />

                <TextView
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="4dp"
                    android:id="@+id/duhr_time_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:layout_margin="4dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"

                    android:text="3:45"
                    />



            </RelativeLayout>

            <RelativeLayout
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/prayer_image_view_asr"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/weather_clear"></ImageView>

                <TextView
                    android:layout_toRightOf="@+id/prayer_image_view_asr"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="4dp"
                    android:textSize="18dp"
                    android:text="@string/string_asr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    />

                <TextView
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="4dp"
                    android:id="@+id/asr_time_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:layout_margin="4dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"

                    android:text="3:45"
                    />



            </RelativeLayout>

            <RelativeLayout
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/prayer_image_view_Maghrib"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/weather_clear_maghrib"></ImageView>

                <TextView
                    android:layout_toRightOf="@+id/prayer_image_view_Maghrib"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="4dp"
                    android:textSize="18dp"
                    android:text="@string/string_maghrib"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    />

                <TextView
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="4dp"
                    android:id="@+id/maghrib_time_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:layout_margin="4dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"

                    android:text="3:45"
                    />



            </RelativeLayout>

            <RelativeLayout
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/prayer_image_view_isha"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/weather_clear_isha"></ImageView>

                <TextView
                    android:layout_toRightOf="@+id/prayer_image_view_isha"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="4dp"
                    android:textSize="18dp"
                    android:text="@string/string_isha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    />

                <TextView
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="4dp"
                    android:id="@+id/isha_time_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:layout_margin="4dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"

                    android:text="3:45"
                    />



            </RelativeLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>